[gd_scene load_steps=28 format=3 uid="uid://bh1ng7g7y3qmd"]

[ext_resource type="Texture2D" uid="uid://dwpc85aqd62wa" path="res://assets/art/player_upper_body.png" id="2_mt2rg"]
[ext_resource type="Script" path="res://Player.gd" id="3"]
[ext_resource type="Script" path="res://Gun.gd" id="3_hg62v"]
[ext_resource type="Script" path="res://UpperBody.gd" id="3_m16nj"]
[ext_resource type="Texture2D" uid="uid://dvdo073rl2oph" path="res://assets/art/player_lower_body.png" id="4_5yjn1"]
[ext_resource type="Script" path="res://LowerBody.gd" id="6_j5tdd"]
[ext_resource type="Texture2D" uid="uid://joccar787siy" path="res://assets/art/player_death_animation.png" id="7_0730b"]
[ext_resource type="Script" path="res://FullBody.gd" id="8_jpxey"]

[sub_resource type="Animation" id="Animation_yj4f2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpperBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [11]
}

[sub_resource type="Animation" id="Animation_agr4i"]
resource_name = "fall"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpperBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54]
}

[sub_resource type="Animation" id="Animation_h7ro3"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpperBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_gg56i"]
resource_name = "reload"
length = 1.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpperBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42]
}

[sub_resource type="Animation" id="Animation_yj77x"]
resource_name = "shoot"
length = 1.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpperBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17, 18, 19, 20, 21]
}

[sub_resource type="Animation" id="Animation_pc6wr"]
resource_name = "walk"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpperBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1jd1q"]
_data = {
"RESET": SubResource("Animation_yj4f2"),
"fall": SubResource("Animation_agr4i"),
"idle": SubResource("Animation_h7ro3"),
"reload": SubResource("Animation_gg56i"),
"shoot": SubResource("Animation_yj77x"),
"walk": SubResource("Animation_pc6wr")
}

[sub_resource type="Animation" id="Animation_1w8mm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_0stkq"]
resource_name = "fall"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35]
}

[sub_resource type="Animation" id="Animation_ps7mu"]
resource_name = "idle"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_b15or"]
resource_name = "jump"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_08wpa"]
resource_name = "stride"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47]
}

[sub_resource type="Animation" id="Animation_qks4j"]
resource_name = "walk"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 9, 10]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lntgh"]
_data = {
"RESET": SubResource("Animation_1w8mm"),
"fall": SubResource("Animation_0stkq"),
"idle": SubResource("Animation_ps7mu"),
"jump": SubResource("Animation_b15or"),
"stride": SubResource("Animation_08wpa"),
"walk": SubResource("Animation_qks4j")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s1ujr"]
size = Vector2(34, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v7sjv"]
size = Vector2(33, 25)

[sub_resource type="Animation" id="Animation_ok502"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_gd3g3"]
resource_name = "death"
length = 1.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_et48l"]
_data = {
"RESET": SubResource("Animation_ok502"),
"death": SubResource("Animation_gd3g3")
}

[node name="Player" type="CharacterBody2D"]
position = Vector2(-1, -4)
collision_layer = 4
script = ExtResource("3")

[node name="UpperBody" type="Sprite2D" parent="."]
visibility_layer = 2
z_index = 1
position = Vector2(14, 0)
texture = ExtResource("2_mt2rg")
hframes = 12
vframes = 5
frame = 11
script = ExtResource("3_m16nj")

[node name="Gun" type="Marker2D" parent="UpperBody"]
position = Vector2(19, 4)
script = ExtResource("3_hg62v")

[node name="CooldownTimer" type="Timer" parent="UpperBody/Gun"]
wait_time = 0.2
one_shot = true

[node name="ReloadTimer" type="Timer" parent="UpperBody/Gun"]
wait_time = 1.9
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="UpperBody"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_1jd1q")
}

[node name="Timer" type="Timer" parent="UpperBody"]
wait_time = 0.2
one_shot = true

[node name="LowerBody" type="Sprite2D" parent="."]
position = Vector2(11, 11)
texture = ExtResource("4_5yjn1")
hframes = 12
vframes = 4
script = ExtResource("6_j5tdd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="LowerBody"]
libraries = {
"": SubResource("AnimationLibrary_lntgh")
}

[node name="PlayerHitbox" type="CollisionShape2D" parent="."]
position = Vector2(4, 4)
shape = SubResource("RectangleShape2D_s1ujr")

[node name="PlayerCrouchHitbox" type="CollisionShape2D" parent="."]
position = Vector2(3.5, 3.5)
shape = SubResource("RectangleShape2D_v7sjv")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_right = 1500
limit_bottom = 480

[node name="FullBody" type="Sprite2D" parent="."]
visible = false
position = Vector2(11, 6)
texture = ExtResource("7_0730b")
hframes = 19
script = ExtResource("8_jpxey")

[node name="AnimationPlayer" type="AnimationPlayer" parent="FullBody"]
libraries = {
"": SubResource("AnimationLibrary_et48l")
}
